[package]
name = "sip2"
version = "0.1.2"
authors = ["Bill Erickson <berickxx@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "SIP2 Client Library"
homepage = "https://github.com/berick/sip2-client-rs"
repository = "https://github.com/berick/sip2-client-rs"
readme = "README.md"
keywords = ["sip", "sip2", "library"]
categories = ["development-tools", "network-programming", "parser-implementations", "value-formatting"]

[dependencies]
chrono = "0.4.19"
log = "0.4.14"
getopts = "0.2.21"
serde_json = { version = "1", optional = true }

[features]
json = ["serde_json"]

[[example]]
name = "sip2-client"
